<!-- 
	Copyright 2012 Robin Braaf, Ossian Madisson, Martin Thörnesson, Fredrik Hansson and Jonas Åström.
	
	This file is part of Asciicam.

    Asciicam is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Asciicam is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Asciicam.  If not, see <http://www.gnu.org/licenses/>. -->

<resources>

    <string name="app_name">AsciiCam</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_camera_screen">Take a picture :)</string>
    <string name="title_activity_menu_screen">asciiCam</string>
    <string name="Take_pic">Take Picture</string>
    <string name="Load_pic">Load Picture</string>
    <string name="Options">Options</string>
    <string name="CaptureButton">Capture</string>
    <string name="title_activity_preview_screen">PreviewScreen</string>
    <string name="ConvertButton">Convert</string>
    <string name="SaveButton">Save</string>
    <string name="BackButton">Back</string>
    <string name="desc">This is the taken picture</string>
    <string name="title_activity_option_screen">OptionScreen</string>
    <string name="option_head_string">Options</string>
    <string name="brightness_head_string">Brightness</string>
    <string name="density_head_string">Particle Density</string>
    <string name="filter_head">Filter</string>
    <string name="colors_head">Colors</string>
    <string name="background_head">Background</string>
    <string name="character_head">Character</string>
	<string name="Logo">Logo</string>
	
</resources>