<!--
	Copyright 2012 Robin Braaf, Ossian Madisson, Martin Thörnesson, Fredrik Hansson and Jonas Åström.

	This file is part of Asciicam.

    Asciicam is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Asciicam is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Asciicam.  If not, see <http://www.gnu.org/licenses/>.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@style/AppTheme"
    android:gravity="bottom"
    android:orientation="vertical" >
	
    <TextView
	    android:id="@+id/option_head"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textSize="20dp"
	    android:layout_alignParentTop="true"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="20dp"
	    android:text="@string/option_head_string" />
    	
	<Button
        android:id="@+id/back"
        android:background="@drawable/custom_back"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"   />
	
	<TextView
	    android:id="@+id/brightness_head"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/filter_spinner"
	    android:layout_below="@+id/option_head"
	    android:layout_marginTop="10dp"
	    android:text="@string/brightness_head_string" />
	
	<ImageView 
	    android:contentDescription="@string/desc"
	    android:id="@+id/brightness_icon"
	    android:background="@drawable/brightness_temp"
	    android:layout_width="30dp"
	    android:layout_height="30dp"
	    android:layout_below="@+id/brightness_head"
	    android:layout_marginTop="10dp"
	    android:layout_marginLeft="50dp" />
	
	<SeekBar
	    android:id="@+id/brightness_bar"
	    android:layout_width="160dp"
	    android:layout_height="30dp"
	    android:layout_toRightOf="@+id/brightness_icon"
	    android:layout_below="@+id/brightness_head"
	    android:layout_marginLeft="20dp"
	    android:layout_marginTop="10dp" />
	
	<TextView
	    android:id="@+id/textView2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/filter_spinner"
	    android:layout_below="@+id/brightness_bar"
	    android:layout_marginTop="20dp"
	    android:text="@string/filter_head" />
	
	<Spinner 
	    android:id="@+id/filter_spinner" 
	    android:layout_width="250dp"
	    android:layout_height="50dp"
	    android:layout_centerHorizontal="true"
	    android:layout_below="@+id/textView2"
	    android:layout_marginTop="10dp" />
	
    <TextView
	    android:id="@+id/colors_head"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:layout_below="@+id/filter_spinner"
	    android:layout_marginTop="20dp"
	    android:textSize="15dp"
	    android:text="@string/colors_head" />

	<TextView
	    android:id="@+id/background_head"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/filter_spinner"
	    android:layout_below="@+id/colors_head"
	    android:layout_marginTop="20dp"
	    android:text="@string/background_head" />
	
	<Spinner 
	    android:id="@+id/background_spinner" 
	    android:layout_width="250dp"
	    android:layout_height="50dp"
	    android:layout_centerHorizontal="true"
	    android:layout_below="@+id/background_head"
	    android:layout_marginTop="10dp" />
	
	<TextView
	    android:id="@+id/character_head"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/filter_spinner"
	    android:layout_below="@+id/background_spinner"
	    android:layout_marginTop="10dp"
	    android:text="@string/character_head" />
	
	<Spinner 
	    android:id="@+id/character_spinner" 
	    android:layout_width="250dp"
	    android:layout_height="50dp"
	    android:layout_centerHorizontal="true"
	    android:layout_below="@+id/character_head"
	    android:layout_marginTop="10dp" />	
	
</RelativeLayout>